--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-image: linear-gradient(to bottom, rgb(141, 188, 233), rgb(240, 121, 204) 75% , rgb(111, 212, 243));
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.components{
+  text-align: center;
+  text-shadow: 4px 2px 4px aqua;
+  font-weight: 700;
+}
+.B1{
+  display: flex;
+  justify-content: center;
+}
+.btn{
+  margin: 50px;
+  padding: 20px;
+  border-radius: 40px;
+  background-color: rgb(163, 128, 221);
+}
+.btn:hover{
+  background-color: rgb(86, 4, 124);
+}
+.container{
+  margin: 0 60px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.Box1{
+  width: 500px;
+  height: 300px;
+  border: 3px solid black;
+  border-radius: 20px;
+  background-color: rgb(135, 231, 222);
+  text-align: center;
+}
+.Box2{
+  width: 500px;
+  height: 300px;
+  border: 3px solid black;
+  border-radius: 20px;
+  background-color: rgb(224, 30, 224);
+  text-align: center;
 }
